Fix snow timers wrong font

--- a/backgrounds/snow.css
+++ b/backgrounds/snow.css
@@ -1,5 +1,5 @@
 /* Font colors and backgrounds */
-#verses, #announcements, #source, #songs {
+#verses, #announcements, #source, #songs, #timers {
   text-shadow: 0px 2px 3px #00000061;
   color: #282626;
 }
